[package]
name = "ckb-message-transport-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
ckb-gen-types = { git = "https://github.com/officeyutong/ckb", branch = "update-schema" }
flexi_logger = "0.29.8"
log = "0.4.26"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
