[package]
name = "ckb-message-transport-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bnum = "0.12.1"
ckb-gen-types = { git = "https://github.com/officeyutong/ckb", branch = "update-schema" }
const-siphasher = "1.0.1"
flexi_logger = "0.29.8"
keyed_priority_queue = "0.4.2"
log = "0.4.26"
minisketch-rs = { git = "https://github.com/Officeyutong/minisketch-rs" }
rand = "0.9.0"
rand_chacha = "0.9.0"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
